--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MobileAppExam</string>
+    <string name="check_your_connection">Please Check Your Connection and Try Again!!</string>
+    <string name="no_internet_connection">No Internet Connection</string>
 </resources>
