--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">MobileAppExam</string>
     <string name="check_your_connection">Please Check Your Connection and Try Again!!</string>
     <string name="no_internet_connection">No Internet Connection</string>
+    <string name="wait_msg">Please wait....</string>
+    <string name="loading">Loading</string>
+    <string name="retry">Retry</string>
 </resources>
